added crypto related stuff